# ft_malloc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  SOURCES.md  THEORY.md  run.sh  run_test
inc/: alloc.h  debug.h  libft_plus.h  shared.h
src/: free.c  malloc.c  realloc.c
src/alloc/: extend_blocks.c  extend_heap.c
src/inc/: alloc.h  libft_plus.h
src/libft_plus/inc/: alloc.h  debug.h  libft_plus.h
src/libft_plus/src/: free.c  malloc.c  realloc.c
src/libft_plus/src/alloc/: extend_blocks.c  extend_heap.c
src/libft_plus/src/log/: print_log.c
src/libft_plus/src/utils/: extend_heap.c  initialize.c
src/log/: print_log.c
src/shared/: check_block.c  shared.c
src/src/: malloc.c  realloc.c
src/src/alloc/: extend_blocks.c  extend_heap.c
src/src/log/: print_log.c
src/src/utils/: initialize.c
src/test/: test.c
src/utils/: initialize.c  list_len.c
tests/: Makefile  alloc_tester
tests/src/: test.c
